# mqtt_io

./: .gitignore  parts_tma_1.kicad_sym
i2c_mcp23017/: CMakeLists.txt  i2c_mcp23017.cpp
i2c_mcp23017_running_light/: CMakeLists.txt  i2c_mcp23017_running_light.cpp
i2c_messung/: i2c_extender_mcp23017_messbericht.tex  pico_2exp_0x20_nok._mark.xcf  pico_2exp_send_0x22_nok_0x20_ok_mark.xcf
i2c_tester.X/: i2cTester_main.c
i2c_tester.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
i2c_tester.X/nbproject/private/: configurations.xml
mqtt_basis_pi_pico/: fp-info-cache  mqtt_basis_pi_pico.kicad_pcb  mqtt_basis_pi_pico.kicad_pro
mqtt_io/: parts_tma_1.kicad_sym  spezifikation_out_karte.txt
mqtt_io/in/mqtt_io_in_box_16i_tht/: fp-info-cache  mqtt_io_in_box_16i_tht.kicad_pcb  mqtt_io_in_box_16i_tht.kicad_prl  mqtt_io_in_box_16i_tht.kicad_pro  mqtt_io_in_box_16i_tht.kicad_sch
mqtt_io/in/mqtt_io_in_box_16i_tht_smd/: mqtt_io_in_box_16i_tht_smd.csv  mqtt_io_in_box_16i_tht_smd.kicad_pcb  mqtt_io_in_box_16i_tht_smd.kicad_prl  mqtt_io_in_box_16i_tht_smd.kicad_pro  mqtt_io_in_box_16i_tht_smd.kicad_sch  mqtt_io_in_box_16i_tht_smd.xml
mqtt_io/in_out/mqtt_io_inOut_8i_8o_smd_optp/: mqtt_io_inOut_8i_8o_smd_optp.kicad_pcb  mqtt_io_inOut_8i_8o_smd_optp.kicad_prl  mqtt_io_inOut_8i_8o_smd_optp.kicad_pro  mqtt_io_inOut_8i_8o_smd_optp.kicad_sch
mqtt_io/mqtt_basis_pi_pico/: mqtt_basis_pi_pico.kicad_prl  mqtt_basis_pi_pico.kicad_sch
mqtt_io/mqtt_out_box/mqtt_out_box_smd/: mqtt_out_box.kicad_prl  (+1 more)
mqtt_io/parts_tma_1.pretty/: AST041-08.kicad_mod  AST_041-2.kicad_mod  AST_041-3.kicad_mod
mqtt_out_box/: fp-info-cache  mqtt_out_box.kicad_pro
parts_tma_1.pretty/: AST041-08.kicad_mod  w5500_spi_modul.kicad_mod
(+14 files in other folders)
